k8/deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fsl-app
  namespace: production
spec:
  serviceName: fsl-app
  replicas: 3
  selector:
    matchLabels:
      app: fsl-app
  template:
    metadata:
      labels:
        app: fsl-app
    spec:
      containers:
      - name: fsl-app
        image: <AWS_ACCOUNT_ID>.dkr.ecr.us-east-1.amazonaws.com/fsl-app:latest
        ports:
        - containerPort: 8080
